--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,9 +1,9 @@
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=INFO, stdout, file
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss.SSS}] [%65c/%5p] : %m%n
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=testing.log
+log4j.appender.file.File=out.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.conversionPattern=[%d{yyyy-MM-dd HH:mm:ss.SSS}] [%65c/%5p] : %m%n
